# zero2prod

./: .gitattributes  2a  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  security-audit.yml  spec.yaml  sqlx-data.json
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/workflows/: General_CI_pipeline.yml  general-ci-pipeline.yml  security-audit.yml
configuration/: base.yaml  production.yaml
migrations/: 20230607120216_create_subscriptions_table.sql  20230628141642_make_status_not_null_in_subscriptions.sql  20230628143821_create_subscription_tokens_table.sql  20230711022721_create_users_table.sql  20230712052857_add_salt_to_users.sql  20230716111645_seed_user.sql  20230723154156_seed_dummy.sql  20230803024040_create_newsletter_issues_table.sql  20230803031034_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  presistence.rs
src/routes/: mod.rs  newsletters.rs  subscription_confirmation.rs  subscriptions.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helper.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirmation.rs
