[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Mohammed (Zack) Salah <zacksalah73@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[profile.release]
# strip symbols from the binary to reduce final target size
strip = true
# enable link time optimiztion - to remove dead code and improve target size 
lto = true

[dependencies]
actix-web = "4"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
config = "0.13.3"
once_cell = "1.18.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }
uuid = { version = "1.3.3", features = ["v4"] }

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]

[dev-dependencies]
reqwest = "0.11.18"
