[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Mohammed (Zack) Salah <zacksalah73@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[profile.release]
# strip symbols from the binary to reduce final target size
strip = true
# enable link time optimiztion - to remove dead code and improve target size 
lto = true

[dependencies]
actix-web = "4"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
anyhow = "1.0.71"
argon2 = { version = "0.5.0", features = ["std"] }
base64 = "0.21.2"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
config = "0.13.3"
hex = "0.4.3"
hmac = { version = "0.12.1", features = ["std"] }
htmlescape = "0.3.1"
once_cell = "1.18.0"
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde-aux = "4.2.0"
sha3 = "0.10.8"
thiserror = "1.0.43"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }
unicode-segmentation = "1.10.1"
urlencoding = "2.1.2"
uuid = { version = "1.3.3", features = ["v4"] }
validator = "0.16.1"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]

[dependencies.reqwest]
version = "0.11.18"
default-features = false
# json flag for de/serialization of json payloads
features = ["json","rustls-tls", "cookies"]

[dev-dependencies]
claims = "0.7.1"
fake = "2.6.1"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde_json = "1.0.99"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.5.19"
